Update javafx_docker_image.md